Get all tasks - backend